--- a/src/component/upload/upload/upload.component.html
+++ b/src/component/upload/upload/upload.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="card" >
+<div class="card" >
     <div class="upload-icon">
 
         <img src="{{upload}}">
@@ -16,8 +16,8 @@
    
 
 
-</div> -->
-<div id="loader">
+</div>
+<!-- <div id="loader">
 <div tabindex="0" class="e-card" id="basic">
     <div class="e-card-header">
         <h3>Upload videos</h3>
@@ -29,4 +29,4 @@
         the White Paper section of Syncfusion’s Technology Resource Portal.
     </div>
 </div>
-</div>
+</div> -->
